--- a/package.json
+++ b/package.json
@@ -4,19 +4,25 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "dev": "vite & (yarn run typed-scss:dev)",
+    "build": "(yarn run typed-scss) & tsc --noEmit && vite build",
+    "preview": "vite preview",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "prettier": "prettier ./src --write",
+    "lint:dev": "yarn prettier && yarn lint --fix",
+    "typed-scss": "typed-scss-modules src/**/*.module.scss --nameFormat camel --aliasPrefixes.@style src/assets/style/",
+    "typed-scss:dev": "yarn typed-scss --watch"
   },
   "dependencies": {
     "classnames": "^2.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-responsive": "^10.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@types/node": "^22.5.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
@@ -32,12 +38,14 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
+    "path": "^0.12.7",
     "postcss": "^8.4.41",
     "prettier": "3.3.3",
     "prettier-plugin-tailwindcss": "^0.5.13",
     "sass": "^1.77.8",
     "tailwindcss": "^3.4.10",
     "tsconfig-paths": "^4.2.0",
+    "typed-scss-modules": "^8.0.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
